# Boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/: CMakeLists.txt
lib/cl_input/: CMakeLists.txt  parse_arguments.cpp  parse_arguments.hpp
lib/core/: CMakeLists.txt  core.cpp  core.hpp
src/: CMakeLists.txt  command_line_options.cpp  command_line_options.hpp  main.cpp  metadata.h
